# cyberos-app-boilerplate

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/qml/: main.qml
translations/: en_US.ts  pl_PL.ts
